sumo/tests/duarouter/alternatives/style2_input/errors/route/route_prob_negative/errors.duarouter
Error: Invalid probability in alternative for route '!1' (-1.00).
Quitting (on error).
